--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMB/3zynuFCvBceVdN99yiu",
+      "authorship_tag": "ABX9TyOeI2tneO8MeQrBi5PmJo+U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install google"
+        "# pip install google"
       ],
       "metadata": {
         "colab": {
