--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeI2tneO8MeQrBi5PmJo+U",
+      "authorship_tag": "ABX9TyORx+sshNxpQ216aVR21UVq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
       ],
       "source": [
         "import pickle\n",
-        "from google.colab import drive\n",
+        "# from google.colab import drive\n",
         "import datetime\n",
         "# drive.mount('/content/drive')\n",
         "\n",
