--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORx+sshNxpQ216aVR21UVq",
+      "authorship_tag": "ABX9TyMaCVJqtH8XqQpkx5hkXrK0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,20 +53,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "X79ndvP7Ga2_",
-        "outputId": "2d5b62df-4523-46fa-d6c1-f5fb0d117107"
+        "outputId": "ca3338a9-10bb-4ac9-8ca1-ffe62dfd04d9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[datetime.datetime(2023, 10, 12, 9, 28, 37, 797530)]\n"
+            "[datetime.datetime(2023, 10, 12, 9, 47, 48, 126763)]\n"
           ]
         }
       ],
@@ -79,8 +79,8 @@
         "list_test=[datetime.datetime.now()]\n",
         "\n",
         "# Save the list to a file\n",
-        "# with open('drive/MyDrive/Perso/Tennis_Gambling/test.pkl', 'wb') as file:\n",
-        "#     pickle.dump(list_test, file)\n",
+        "with open('/test.pkl', 'wb') as file:\n",
+        "    pickle.dump(list_test, file)\n",
         "\n",
         "print(list_test)"
       ]
