--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaCVJqtH8XqQpkx5hkXrK0",
+      "authorship_tag": "ABX9TyNJSRA1GoJyP5JREDcYn7gA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,17 +72,19 @@
       ],
       "source": [
         "import pickle\n",
-        "# from google.colab import drive\n",
         "import datetime\n",
-        "# drive.mount('/content/drive')\n",
+        "import os\n",
         "\n",
-        "list_test=[datetime.datetime.now()]\n",
+        "list_test = [datetime.datetime.now()]\n",
+        "\n",
+        "# Specify the file path within the data folder in the GitHub workspace\n",
+        "file_path = f\"{os.environ['GITHUB_WORKSPACE']}/tennis_prediction/data/test.pkl\"\n",
         "\n",
         "# Save the list to a file\n",
-        "with open('/test.pkl', 'wb') as file:\n",
+        "with open(file_path, 'wb') as file:\n",
         "    pickle.dump(list_test, file)\n",
         "\n",
-        "print(list_test)"
+        "print(list_test)\n"
       ]
     },
     {
