--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtMG5YZ1tGJSAGar74cSnA",
+      "authorship_tag": "ABX9TyOMmz1KyrmNojxZLxxEvQ/q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "list_test = [datetime.datetime.now()]\n",
         "\n",
         "# Specify the file path within the data folder in the GitHub workspace\n",
-        "file_path = f\"{os.environ['GITHUB_WORKSPACE']}/data/test.pkl\"\n",
+        "file_path = f\"{os.environ['GITHUB_WORKSPACE']}/data/test_data.pkl\"\n",
         "\n",
         "# Save the list to a file\n",
         "with open(file_path, 'wb') as file:\n",
