--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMmz1KyrmNojxZLxxEvQ/q",
+      "authorship_tag": "ABX9TyOI9OkqVe0B0VVjasFPxU0J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,31 +24,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# pip install google"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1l3N4aDKOyum",
-        "outputId": "a63ab36f-5e39-4711-873a-90e686956fd0"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: google in /usr/local/lib/python3.10/dist-packages (2.0.3)\n",
-            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.10/dist-packages (from google) (4.11.2)\n",
-            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4->google) (2.5)\n"
-          ]
-        }
       ]
     },
     {
@@ -77,79 +52,20 @@
         }
       ],
       "source": [
-        "import pickle\n",
+        "# import pickle\n",
         "import datetime\n",
         "import os\n",
         "\n",
         "list_test = [datetime.datetime.now()]\n",
         "\n",
         "# Specify the file path within the data folder in the GitHub workspace\n",
-        "file_path = f\"{os.environ['GITHUB_WORKSPACE']}/data/test_data.pkl\"\n",
+        "file_path = f\"{os.environ['GITHUB_WORKSPACE']}/test_data.txt\"\n",
         "\n",
-        "# Save the list to a file\n",
-        "with open(file_path, 'wb') as file:\n",
-        "    pickle.dump(list_test, file)\n",
+        "with open(file_path, 'w') as file:\n",
+        "    for item in list_test:\n",
+        "        file.write(\"%s\\n\" % item)\n",
         "\n",
         "print(list_test)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# with open('drive/MyDrive/Perso/Tennis_Gambling/test.pkl', 'rb') as file:\n",
-        "#     test = pickle.load(file)\n",
-        "\n",
-        "# test"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RMpgAFVIITte",
-        "outputId": "d3b71a6d-a4cf-462e-af2d-7750ac8dcedd"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[datetime.datetime(2023, 10, 12, 9, 9, 19, 414801)]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "print(f\"{os.environ['GITHUB_WORKSPACE']}/data/test.pkl\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 315
-        },
-        "id": "ytPm5JRrJeuf",
-        "outputId": "af0624d7-e000-4b4d-ed33-dd6c237352c5"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-71088704ff44>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{os.environ['GITHUB_WORKSPACE']}/data/test.pkl\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/lib/python3.10/os.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    678\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    679\u001b[0m             \u001b[0;31m# raise KeyError with the original key value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 680\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    681\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecodevalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'GITHUB_WORKSPACE'"
-          ]
-        }
       ]
     }
   ]
