--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORrKvSS2uh4v06kGa83SfC",
+      "authorship_tag": "ABX9TyPKOmrJce9XiHzwoartUq/i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "list_test = [datetime.datetime.now()]\n",
         "\n",
         "# Specify the file path within the data folder in the GitHub workspace\n",
-        "file_path = 'tennis_prediction/test_data.txt'\n",
+        "file_path = 'test_data.txt'\n",
         "\n",
         "with open(file_path, 'w') as file:\n",
         "    for item in list_test:\n",
