--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKOmrJce9XiHzwoartUq/i",
+      "authorship_tag": "ABX9TyMJPGxTM1nMBz7845UNN+Ra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,11 +60,11 @@
         "# Specify the file path within the data folder in the GitHub workspace\n",
         "file_path = 'test_data.txt'\n",
         "\n",
-        "with open(file_path, 'w') as file:\n",
+        "with open(file_path, 'a') as file:\n",
         "    for item in list_test:\n",
-        "        file.write(\"%s\\n\" % item)\n",
+        "        file.write(str(item) + \"\\n\")\n",
         "\n",
-        "print(list_test)\n"
+        "# print(list_test)\n"
       ]
     }
   ]
