--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJPGxTM1nMBz7845UNN+Ra",
+      "authorship_tag": "ABX9TyPTwFsENLd3KRoE9Hn0sdlv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,43 +28,109 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 30,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        },
-        "id": "X79ndvP7Ga2_",
-        "outputId": "75d7f1b7-ba6a-42c1-b172-db1e1dff35d8"
+        "id": "X79ndvP7Ga2_"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-c3579983c4dd>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mfile_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'tennis_prediction/test_data.txt'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_test\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s\\n\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'tennis_prediction/test_data.txt'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# import pickle\n",
+        "# # import pickle\n",
+        "# import datetime\n",
+        "# import os\n",
+        "\n",
+        "# list_test = [datetime.datetime.now()]\n",
+        "\n",
+        "# # Specify the file path within the data folder in the GitHub workspace\n",
+        "# file_path = 'test_data.txt'\n",
+        "\n",
+        "# with open(file_path, 'a') as file:\n",
+        "#     for item in list_test:\n",
+        "#         file.write(str(item) + \"\\n\")\n",
+        "\n",
+        "# # print(list_test)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !pip install PyGithub  # Install the PyGitHub library\n",
+        "\n",
         "import datetime\n",
         "import os\n",
+        "from github import Github\n",
         "\n",
-        "list_test = [datetime.datetime.now()]\n",
+        "# Replace these with your GitHub credentials\n",
+        "username = \"jeanbouteiller-ds\"\n",
+        "password = \"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\"\n",
+        "repository_name = \"tennis_prediction\"\n",
+        "file_name = \"test_data.txt\"  # The name of the new file\n",
+        "branch_name = \"main\"  # Replace with your branch name\n",
         "\n",
-        "# Specify the file path within the data folder in the GitHub workspace\n",
-        "file_path = 'test_data.txt'\n",
         "\n",
-        "with open(file_path, 'a') as file:\n",
-        "    for item in list_test:\n",
-        "        file.write(str(item) + \"\\n\")\n",
+        "# Initialize the GitHub client\n",
+        "g = Github(username, password)\n",
         "\n",
-        "# print(list_test)\n"
+        "# Access the desired repository\n",
+        "repo = g.get_user().get_repo(repository_name)\n",
+        "\n",
+        "# # Create a new file with content\n",
+        "content = str(datetime.datetime.now())\n",
+        "try:\n",
+        "    file = repo.get_contents(file_name, ref=branch_name)\n",
+        "    sha = file.sha\n",
+        "except Exception as e:\n",
+        "    sha = None\n",
+        "\n",
+        "if sha:\n",
+        "    repo.update_file(file_name, \"Update file\", content, sha, branch_name)\n",
+        "    print(f\"Updated {file_name} in {repository_name}\")\n",
+        "else:\n",
+        "    repo.create_file(file_name, \"Create file\", content, branch_name)\n",
+        "    print(f\"Created {file_name} in {repository_name}\")\n",
+        "# print(f\"Created {file_name} in {repository_name}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KpnJL0f0ZwBS",
+        "outputId": "b948b7cd-1558-4ab9-bd02-1390c91e0496"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated test_data.txt in tennis_prediction\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "content"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3Nlov4JycMS0",
+        "outputId": "2463105a-0a04-483b-cda0-46e8dfd15cac"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "datetime.datetime(2023, 10, 12, 15, 10, 39, 282381)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
       ]
     }
   ]
