--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTwFsENLd3KRoE9Hn0sdlv",
+      "authorship_tag": "ABX9TyPVYu06KXpBEkow+bM6yH5Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# !pip install PyGithub  # Install the PyGitHub library\n",
+        "!pip install PyGithub  # Install the PyGitHub library\n",
         "\n",
         "import datetime\n",
         "import os\n",
