--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVYu06KXpBEkow+bM6yH5Z",
+      "authorship_tag": "ABX9TyOlMo6xrrfboZqCVi/fIQZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
         "\n",
         "# Replace these with your GitHub credentials\n",
         "username = \"jeanbouteiller-ds\"\n",
-        "password = \"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\"\n",
+        "password = \"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\"\n",
         "repository_name = \"tennis_prediction\"\n",
         "file_name = \"test_data.txt\"  # The name of the new file\n",
         "branch_name = \"main\"  # Replace with your branch name\n",
@@ -94,14 +94,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KpnJL0f0ZwBS",
-        "outputId": "b948b7cd-1558-4ab9-bd02-1390c91e0496"
+        "outputId": "eb8deae0-98a4-4126-afff-47ccf17d2004"
       },
-      "execution_count": 29,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Requirement already satisfied: PyGithub in /usr/local/lib/python3.10/dist-packages (2.1.1)\n",
+            "Requirement already satisfied: pynacl>=1.4.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (1.5.0)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.8.2)\n",
+            "Requirement already satisfied: requests>=2.14.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.31.0)\n",
+            "Requirement already satisfied: pyjwt[crypto]>=2.4.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.8.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (4.5.0)\n",
+            "Requirement already satisfied: urllib3>=1.26.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.0.6)\n",
+            "Requirement already satisfied: Deprecated in /usr/local/lib/python3.10/dist-packages (from PyGithub) (1.2.14)\n",
+            "Requirement already satisfied: cryptography>=3.4.0 in /usr/local/lib/python3.10/dist-packages (from pyjwt[crypto]>=2.4.0->PyGithub) (41.0.4)\n",
+            "Requirement already satisfied: cffi>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from pynacl>=1.4.0->PyGithub) (1.16.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.14.0->PyGithub) (3.3.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.14.0->PyGithub) (3.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.14.0->PyGithub) (2023.7.22)\n",
+            "Requirement already satisfied: wrapt<2,>=1.10 in /usr/local/lib/python3.10/dist-packages (from Deprecated->PyGithub) (1.15.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil->PyGithub) (1.16.0)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.4.1->pynacl>=1.4.0->PyGithub) (2.21)\n",
             "Updated test_data.txt in tennis_prediction\n"
           ]
         }
